--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<p><a href="https://docs.google.com/spreadsheets/d/1ySt6UkiJlmUEpfivMa9iHx9q9mhjtkIMEtkKDgMufrQ/edit#gid=0">DMSADM SeminarTopic/Cp</a></p>
   <p><a href="https://docs.google.com/spreadsheets/d/1lTrT_EgXmVrTLImgTP6GYSDOyVk-Bo5Sq3RT_Iyjbyo/edit#gid=0">ALL SUBJECT ( SEMINAR / GD / CP )</a></p>
   <p><a 
-        href="https://docs.google.com/spreadsheets/d/1f7hFqJA2_5zlFmfMPavvzGJ315_baVevctelq9OBVrs/edit#gid=0">EDAI PROJECT (AND OUR GROUP STATUS ) </a></p>
+        href="https://docs.google.com/spreadsheets/d/1f7hFqJA2_5zlFmfMPavvzGJ315_baVevctelq9OBVrs/edit#gid=0">( OUR GROUP STATUS ) </a></p>
     
   <p><a href="https://docs.google.com/spreadsheets/d/1AnHkAkWqWvJqxmODUu2YYvwkV6oyvfHxwbQlNISYRJ4/edit#gid=0">//  EDAI PROJECT </a></p>
 </body>
